[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Paddle.gd" type="Script" id=2]
[ext_resource path="res://Assets/paddle.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Tile.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/OstrichSans-Heavy.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Lives.gd" type="Script" id=8]
[ext_resource path="res://Assets/8bit-OnTheOffensive.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/yet another soundtrack - Track 02 (Castle Von Krumpen).ogg" type="AudioStream" id=10]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=11]
[ext_resource path="res://Assets/explosion.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50.026, 12 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0
bounce = 1.0

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 6 )

[node name="World" type="Node"]
script = ExtResource( 1 )

[node name="Paddle" type="KinematicBody2D" parent="."]
position = Vector2( 519, 512 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Paddle"]
position = Vector2( -2.00002, 16 )
scale = Vector2( 1.5625, 0.5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle"]
position = Vector2( -2, 16 )
shape = SubResource( 1 )

[node name="Ball" parent="." instance=ExtResource( 4 )]
physics_material_override = SubResource( 2 )
linear_velocity = Vector2( 200, -200 )

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall"]
polygon = PoolVector2Array( 0, 0, 0, 650, -60, 650, -60, -50, 1090, -50, 1090, 650, 1030, 650, 1030, 0 )

[node name="Tiles" type="Node" parent="."]

[node name="Gray Tiles" type="Node2D" parent="Tiles"]

[node name="Tile" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 880, 350 )

[node name="Tile2" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 790, 350 )

[node name="Tile3" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 700, 350 )

[node name="Tile4" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 610, 350 )

[node name="Tile5" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 520, 320 )

[node name="Tile6" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 340, 350 )

[node name="Tile7" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 160, 350 )

[node name="Tile8" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 250, 350 )

[node name="Tile9" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 430, 350 )

[node name="Tile10" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 70, 330 )

[node name="Tile11" parent="Tiles/Gray Tiles" instance=ExtResource( 5 )]
position = Vector2( 970, 330 )

[node name="Red Tiles" type="Node" parent="Tiles"]
editor/display_folded = true

[node name="Tile" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 840, 270 )

[node name="Tile10" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 930, 270 )

[node name="Tile2" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 740, 270 )

[node name="Tile3" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 650, 270 )

[node name="Tile4" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 560, 270 )

[node name="Tile5" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 470, 270 )

[node name="Tile6" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 380, 270 )

[node name="Tile7" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 290, 270 )

[node name="Tile8" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 200, 270 )

[node name="Tile9" parent="Tiles/Red Tiles" instance=ExtResource( 5 )]
position = Vector2( 110, 270 )

[node name="Blue Tiles" type="Node" parent="Tiles"]
editor/display_folded = true

[node name="Tile" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 900, 210 )

[node name="Tile2" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 810, 210 )

[node name="Tile3" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 720, 210 )

[node name="Tile4" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 630, 210 )

[node name="Tile5" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 534, 210 )

[node name="Tile6" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 438, 210 )

[node name="Tile7" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 340, 210 )

[node name="Tile8" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 240, 210 )

[node name="Tile9" parent="Tiles/Blue Tiles" instance=ExtResource( 5 )]
position = Vector2( 142, 210 )

[node name="Green Tiles" type="Node" parent="Tiles"]
editor/display_folded = true

[node name="Tile2" parent="Tiles/Green Tiles" instance=ExtResource( 5 )]
position = Vector2( 842, 150 )

[node name="Tile3" parent="Tiles/Green Tiles" instance=ExtResource( 5 )]
position = Vector2( 752, 150 )

[node name="Tile4" parent="Tiles/Green Tiles" instance=ExtResource( 5 )]
position = Vector2( 662, 150 )

[node name="Tile5" parent="Tiles/Green Tiles" instance=ExtResource( 5 )]
position = Vector2( 570, 150 )

[node name="Tile6" parent="Tiles/Green Tiles" instance=ExtResource( 5 )]
position = Vector2( 470, 150 )

[node name="Tile7" parent="Tiles/Green Tiles" instance=ExtResource( 5 )]
position = Vector2( 380, 150 )

[node name="Tile8" parent="Tiles/Green Tiles" instance=ExtResource( 5 )]
position = Vector2( 290, 150 )

[node name="Tile9" parent="Tiles/Green Tiles" instance=ExtResource( 5 )]
position = Vector2( 200, 150 )

[node name="White Tiles" type="Node" parent="Tiles"]
editor/display_folded = true

[node name="Tile3" parent="Tiles/White Tiles" instance=ExtResource( 5 )]
position = Vector2( 800, 90 )

[node name="Tile4" parent="Tiles/White Tiles" instance=ExtResource( 5 )]
position = Vector2( 700, 90 )

[node name="Tile5" parent="Tiles/White Tiles" instance=ExtResource( 5 )]
position = Vector2( 602, 90 )

[node name="Tile6" parent="Tiles/White Tiles" instance=ExtResource( 5 )]
position = Vector2( 450, 90 )

[node name="Tile7" parent="Tiles/White Tiles" instance=ExtResource( 5 )]
position = Vector2( 350, 90 )

[node name="Tile8" parent="Tiles/White Tiles" instance=ExtResource( 5 )]
position = Vector2( 250, 90 )

[node name="Yellow Tiles" type="Node" parent="Tiles"]
editor/display_folded = true

[node name="Tile" parent="Tiles/Yellow Tiles" instance=ExtResource( 5 )]
position = Vector2( 760, 40 )

[node name="Tile2" parent="Tiles/Yellow Tiles" instance=ExtResource( 5 )]
position = Vector2( 670, 40 )

[node name="Tile3" parent="Tiles/Yellow Tiles" instance=ExtResource( 5 )]
position = Vector2( 580, 40 )

[node name="Tile4" parent="Tiles/Yellow Tiles" instance=ExtResource( 5 )]
position = Vector2( 487, 40 )

[node name="Tile5" parent="Tiles/Yellow Tiles" instance=ExtResource( 5 )]
position = Vector2( 400, 40 )

[node name="Tile6" parent="Tiles/Yellow Tiles" instance=ExtResource( 5 )]
position = Vector2( 310, 40 )

[node name="Score" type="Label" parent="."]
margin_left = 30.0
margin_top = 15.0
margin_right = 90.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 3 )
text = "Score:"
script = ExtResource( 7 )

[node name="Lives" type="Label" parent="."]
margin_left = 898.0
margin_top = 20.0
margin_right = 960.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 4 )
text = "Lives:"
script = ExtResource( 8 )

[node name="Background1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="Background2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 510, 280 )
offset = Vector2( -510, -280 )
anchor_mode = 0
current = true
process_mode = 0
script = ExtResource( 11 )
decay_rate = 2.0

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
[connection signal="finished" from="Background1" to="." method="_on_Background1_finished"]
[connection signal="finished" from="Background2" to="." method="_on_Background2_finished"]
